duniverse/lwt/test/ppx_expect/cases/try_2.expect
File "try_2.ml", line 4, characters 12-13:
Error: This expression has type int but an expression was expected of type
         unit Lwt.t
