duniverse/lwt/test/ppx_expect/cases/try_2.ml
let _ =
  try%lwt
    Lwt.return ()
  with _ -> 5;;
